forecast-spreadsheet/src/snapshots/forecast_spreadsheet__tests__parse_excel_spreadsheet_gudauri.snap
---
source: forecast-spreadsheet/src/lib.rs
expression: "&forecast"
---
{
  "template_version": {
    "major": 0,
    "minor": 3,
    "patch": 3
  },
  "area": "gudauri",
  "forecaster": {
    "name": "Manu Greer",
    "organisation": null
  },
  "time": "2023-04-03T21:00:00+04:00",
  "recent_observations": {
    "en-UK": "3rd April - multiple wet loose in Kobi valley, Size 1, E/SE, 2900 - 2600m. 2nd April - size 1 wet loose Bidara, SW, 2600 m. 30th March - size 2-3 slab (presumably wind), Sadzele lower peak, 3200m, N. \nThe snowpack still has a weak layer of crystalised snow at the ground in some places, at higher elevations from NW through to E aspects. Above this are strong layers of windpacked and re-frozen snow with no significant weaknesses reported. \nNew snow in the few days since March 28th was moved around by first S then N winds. ",
    "ka-GE": "3 აპრილი - მრავალჯერადი სველი ფხვიერი კობის ხეობაში, ზომა 1, E/SE, 2900 - 2600 მ. 2 აპრილი - ზომა 1 სველი ფხვიერი ბიდარა, SW, 2600 მ. 30 მარტი - 2-3 ზომის ფილა (სავარაუდოდ ქარი), საძელეს ქვედა მწვერვალი 3200მ ნ.\nთოვლის ფენას ჯერ კიდევ აქვს კრისტალიზებული თოვლის სუსტი ფენა მიწაზე ზოგან, უფრო მაღალ სიმაღლეებზე ჩრდილო-დასავლეთიდან E ასპექტამდე. ამის ზემოთ არის ქარიშხალი და ხელახლა გაყინული თოვლის ძლიერი ფენები, მნიშვნელოვანი სისუსტეების გარეშე.\n28 მარტიდან რამდენიმე დღეში ახალმა თოვლმა ჯერ S-მა შემდეგ N ქარმა გადაიტანა."
  },
  "forecast_changes": {},
  "weather_forecast": {
    "en-UK": "Sunny and warm tomorrow April 4th with light S winds. Wednseday 5th gets even warmer with some rain and thunder in the afternoon, and S winds strengthening. "
  },
  "valid_for": 172800,
  "description": {
    "en-UK": "It's the last forecast of the season and this one's all about heat. Sun, warm air temperatures and rain make loose wet slides likely. There's more snow on the way later this week, and at high elevations there is still the old facet layer lurking, so be vigilant and share your observations on the page. Have a safe and happy spring!\n\n "
  },
  "hazard_ratings": {
    "alpine": {
      "value": "moderate",
      "trend": null,
      "confidence": null
    },
    "high-alpine": {
      "value": "moderate",
      "trend": null,
      "confidence": "moderate"
    },
    "overall": {
      "value": "moderate",
      "trend": null,
      "confidence": null
    },
    "sub-alpine": {
      "value": "low",
      "trend": null,
      "confidence": null
    }
  },
  "avalanche_problems": [
    {
      "kind": "loose-wet",
      "aspect_elevation": {
        "alpine": {
          "aspects": [
            "N",
            "NE",
            "NW",
            "W",
            "SW",
            "S",
            "SE",
            "E"
          ]
        },
        "high-alpine": {
          "aspects": [
            "E",
            "W",
            "S",
            "SE",
            "SW"
          ]
        }
      },
      "confidence": null,
      "trend": "deteriorating",
      "size": 2,
      "distribution": "widespread",
      "time_of_day": "afternoon",
      "sensitivity": "reactive",
      "description": {
        "en-UK": "With temperatures rising and sunny days, snow starts to melt and the snowpack becomes saturated with free water what makes wet loose avalanches possible. Widespread wind and solar crusts that formed before the recent snowfall are a weak interface that the surface snow can slide on. This hazard increases during the day, and is usually at its worst by mid-afternoon.  "
      }
    },
    {
      "kind": "deep-slab",
      "aspect_elevation": {
        "high-alpine": {
          "aspects": [
            "NW",
            "N",
            "NE",
            "E",
            "SE"
          ]
        }
      },
      "confidence": null,
      "trend": "no-change",
      "size": 3,
      "distribution": "isolated",
      "time_of_day": "all-day",
      "sensitivity": "stubborn",
      "description": {
        "en-UK": "The persistent weak basal layer might still be triggered in high alpine areas, particularly in steep areas with a shallow (thin) snowpack or around rocks, where the weight of one or more riders, a hard turn or jump, or a small avalanche could break the slab above."
      }
    },
    {
      "kind": "wind-slab",
      "aspect_elevation": {
        "high-alpine": {
          "aspects": [
            "SE",
            "S",
            "SW",
            "E"
          ]
        }
      },
      "confidence": null,
      "trend": "no-change",
      "size": 2,
      "distribution": "specific",
      "time_of_day": "all-day",
      "sensitivity": "reactive",
      "description": {
        "en-UK": "N and NW winds will have formed small slabs on S and SE areas at ridgelines in the high alpine. Watch out for areas that look 'fat', or where the snow feels harder, hollow and drum-like. By the end of the forecast period, slabs will start building on the N again."
      }
    }
  ],
  "elevation_bands": {
    "alpine": {
      "upper": 2600,
      "lower": 2000
    },
    "high-alpine": {
      "upper": null,
      "lower": 2600
    },
    "sub-alpine": {
      "upper": 2000,
      "lower": null
    }
  }
}
